cluster/development/vim-dojo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: vim-dojo
    app.kubernetes.io/version: 004a223
  name: vim-dojo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vim-dojo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vim-dojo
        app.kubernetes.io/version: 004a223
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/vim-dojo:004a223@sha256:dd7b73e5c1b0cc2b93358c3966d111c36702dfe917bfdf1beae4b3cd3b29e8b2
        name: vim-dojo
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - mountPath: /state
          name: state-volume
        - mountPath: /workspace
          name: workspace-volume
        - mountPath: /tmp
          name: socket-volume
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 4Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      volumes:
      - name: state-volume
        persistentVolumeClaim:
          claimName: vim-dojo-state-pvc
      - name: workspace-volume
        persistentVolumeClaim:
          claimName: vim-dojo-workspace-pvc
      - name: socket-volume
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
