cluster/development/vim-dojo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vim-dojo
    app.kubernetes.io/version: 004a223
  name: vim-dojo
spec:
  selector:
    app.kubernetes.io/name: vim-dojo
  ports:
  - name: http
    port: 3000
    targetPort: 3000
